--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation group: 'junit', name: 'junit', version: '4.5'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
 
 }
 
 test {
-	useJUnitPlatform()
+	useJUnit()
 }
