--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 country_by_code_url=https://restcountries.eu/rest/v2/alpha/{code}
+country_by_full_name_url=https://restcountries.eu/rest/v2/name/{name}?fullText=true
+country_by_country_name_url=https://restcountries.eu/rest/v2/name/{name}
