--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	testImplementation group: 'junit', name: 'junit', version: '4.5'
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	//testImplementation group: 'junit', name: 'junit', version: '4.5'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
 test {
-	useJUnit()
+	useJUnitPlatform()
 }
